--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,6 @@
     },
     "require": {
         "phpoffice/phpspreadsheet": ">=1.24.1",
-        "psr/log": "~1.0 || ~2.0 || ~3.0",
+        "psr/log": "~1.0 || ~2.0 || ~3.0"
     }
 }
